Fixed draf picks panel overlapping draft booster panel on small screens.

--- a/webdrafter/css/style.scss
+++ b/webdrafter/css/style.scss
@@ -1075,7 +1075,7 @@ $shape-double-height: 523px;
 		
 		.draft-booster {
 			background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIklEQVQIW2NkQAJ37979zwjjgzjKysqMYAEYB8RmROaABAAFug+bVs5NCQAAAABJRU5ErkJggg==) repeat;
-			min-height: 300px;
+			/*min-height: 300px;*/
 			
 			flex: 1 1 auto;
 			
